--- a/CSS_advanced/styles/13-style.css
+++ b/CSS_advanced/styles/13-style.css
@@ -6,7 +6,7 @@
     --color-dark-grey: #353535;
     --text-color: var(--color-black);
     --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    --font-family-title: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-title: Raleway, "Helvetica Neue", Helvetica, Arial, sans-serif;
     --font-size-small: 1.2rem;
     --font-size-medium: 1.6rem;
     --font-size-large: 1.8rem;
@@ -31,20 +31,20 @@ body {
     line-height: var(--line-height-base);
 }
 
-a[href] {
+a:link {
     color: var(--text-color);
     text-decoration: none;
 }
 
-a[href]:visited {
+a:visited {
     font-style: italic;
 }
 
-a[href]:hover {
+a:hover {
     text-decoration: underline;
 }
 
-a[href]:active {
+a:active {
     background-color: var(--color-light-grey);
 }
 
@@ -60,6 +60,13 @@ a[href]:active {
     text-align: var(--section-header-align);
 }
 
+.section-tagline {
+    color: var(--color-primary);
+    font-family: var(--font-family-title);
+    font-weight: var(--font-weight-bold);
+    text-transform: var(--section-tagline-transform);
+}
+
 .section-title {
     font-family: var(--font-family-title);
     font-size: var(--font-size-xx-large);
@@ -68,19 +75,17 @@ a[href]:active {
     color: var(--section-title-color);
 }
 
-.section-tagline {
-    font-family: var(--font-family-title);
-    text-transform: var(--section-tagline-transform);
-    font-weight: var(--font-weight-bold);
-    color: var(--color-primary);
-}
-
 html {
     scroll-behavior: smooth;
     font-size: 62.5%;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: var(--font-family-title);
     font-weight: var(--font-weight-bold);
 }
