--- a/CSS_advanced/styles/23-style.css
+++ b/CSS_advanced/styles/23-style.css
@@ -148,16 +148,25 @@ h1, h2, h3, h4, h5, h6 {
     background: var(--color-black);
 }
 
-/* Style pour la footer-address */
+/* Styles pour footer-address */
 .footer-address {
     color: var(--text-color);
+    font-size: var(--font-size-medium);
 }
 
-/* Style pour social-link */
+/* Styles pour social-link */
 .social-link {
     display: block;
+    color: var(--text-color);
+    text-decoration: none;
+    margin-bottom: 1rem;
 }
 
 .social-link svg {
     fill: var(--text-color);
+}
+
+/* Assurer que les icônes sont bien alignées */
+.social-link svg {
+    vertical-align: middle;
 }
